Fix overflow on kit banner button and adjust kit position

--- a/media/css/cms/flare26-kit-banner.css
+++ b/media/css/cms/flare26-kit-banner.css
@@ -53,13 +53,18 @@
     text-wrap: balance;
 }
 
+.fl-banner-kit .fl-button {
+    max-inline-size: 100%;
+    text-wrap: balance;
+}
+
 .fl-banner-kit .fl-superheading {
     color: var(--fl-theme-color-text);
 }
 
 .fl-banner-kit-diving-in {
     --kit-img: url('/media/img/firefox/flare/kit-dive.png');
-    --kit-banner-padding-bottom: 375px;
+    --kit-banner-padding-bottom: 400px;
     --kit-img-position: left -70px bottom var(--token-layout-3xs);
     --kit-img-size: min(calc(100% - calc(var(--token-layout-3xs) * 2)), 400px)
         auto;
@@ -115,7 +120,7 @@
     .fl-banner-kit-diving-in {
         --kit-img-position: left calc(50% - 155px) bottom var(--token-layout-xs);
         --kit-img-size: min(60%, 450px) auto;
-        --kit-banner-padding-bottom: 400px;
+        --kit-banner-padding-bottom: 440px;
     }
 
     .fl-banner-kit-with-qr {
@@ -152,7 +157,7 @@
     }
 
     .fl-banner-kit-diving-in {
-        --kit-banner-padding-bottom: 420px;
+        --kit-banner-padding-bottom: 450px;
         --kit-img-size: 550px auto;
         --kit-img-position: left calc(50% - 192px) bottom var(--token-layout-md);
         --kit-banner-padding-right: var(--token-layout-lg);
